<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Titles -->
    <string name="app_name">Rememb\'r All !</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_groups">Groups</string>
    <string name="title_group_edit">Edit group</string>
    <string name="title_group_add">Add new group</string>

    <!-- Global -->
    <string name="global_default" translatable="false">-</string>
    <string name="global_yes">Yes</string>
    <string name="global_no">No</string>
    <string name="global_ok">Ok</string>
    <string name="global_cancel">Cancel</string>

    <!-- Filenames -->
    <string name="filename_settings" translatable="false">pref</string>
    <string name="filename_groups" translatable="false">group</string>
    <string name="filename_reminders" translatable="false">reminder</string>

    <!-- Menu -->
    <string name="menu_main_about">About</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_groups_add">Add group</string>
    <string name="menu_group_save">Save changes</string>

    <!-- About -->
    <string name="about_contact">Contact</string>
    <string name="about_mail" translatable="false">myadridev@gmail.com</string>
    <string name="about_mail_client_choice_label">Send mail with</string>
    <string name="about_mail_uri" translatable="false">mailto:</string>
    <string name="about_version">Version</string>
    <string name="about_version_prefix">v</string>

    <!-- Settings -->
    <string name="settings_use_default_reminder_time">Use default time for all reminders</string>
    <string name="settings_use_default_reminder_time_title">Use default time for all reminders</string>
    <string name="settings_default_reminder_time">Default time for reminders</string>
    <string name="settings_timepicker_title">Select time</string>
    <string name="settings_file_error">Internal error, try again!</string>
    <string name="settings_number_reminders_home">Number of reminders on home page</string>
    <string name="settings_number_reminders_home_title">Numbers of reminders on home page</string>

    <!-- Utils -->
    <string name="utils_true" translatable="false">true</string>
    <string name="utils_false" translatable="false">false</string>
    <string name="utils_time_format">hh:mm a</string>
    <string name="utils_storage_time_format" translatable="false">HH:mm</string>
    <string name="utils_date_format">E yyyy/MM/dd</string>
    <string name="utils_storage_date_format" translatable="false">yyyy/MM/dd</string>
    <string name="database_name" translatable="false">DB_Data</string>

    <!-- Main -->
    <string name="main_group_quick_access">Quick access</string>
    <string name="main_group_next_coming_reminders">Next coming reminders</string>

    <!-- Groups -->
    <string name="groups_no_group">No groups for the moment</string>
    <string name="menu_group_edit">Edit group</string>
    <string name="title_group_detail">Group details</string>
    <string name="group_name">Group name</string>
    <string name="menu_group_cancel">Cancel changes</string>
    <string name="menu_group_delete">Delete group</string>
    <string name="global_confirmation_title">Confirmation</string>
    <string name="group_delete_confirmation">Do you want to delete the group?</string>
    <string name="menu_group_quick_access_off">Add to quick access</string>
    <string name="menu_group_quick_access_on">Remove from quick access</string>
    <string name="main_see_all_groups">See all groups...</string>
    <string name="groups_add_reminder">Add a reminder...</string>
    <string name="store_groups" translatable="false">groups</string>
    <string name="store_reminders" translatable="false">reminders</string>
    <string name="group_use_default_reminder_time">Use default time for the reminders of the group</string>
    <string name="group_default_reminder_time">Default time for reminders</string>
    <string name="title_reminder_detail">Reminder details</string>
    <string name="menu_reminder_edit">Edit reminder</string>
    <string name="menu_reminder_delete">Delete reminder</string>
    <string name="menu_reminder_save">Save changes</string>
    <string name="menu_reminder_cancel">Cancel changes</string>
    <string name="reminder_delete_confirmation">Do you want to delete the reminder?</string>
    <string name="reminder_name">Reminder name</string>
    <string name="reminder_time">Custom time for the reminder</string>
    <string name="reminder_use_custom_reminder_time">Use custom time for this reminder</string>
    <string name="reminder_date">Date of the reminder</string>
    <string name="group_reminders_list">Reminders</string>
    <string name="group_description">Description</string>
    <string name="global_optional">Optional</string>
    <string name="reminder_description">Description</string>
    <string name="group_error_no_name">No name defined for this group</string>
    <string name="group_error_existing_name">Another group has the same name</string>
    <string name="reminder_error_no_name">No name defined for this reminder</string>
    <string name="reminder_error_existing_name">Another reminder has the same name</string>
    <string name="reminder_error_no_reminder_time">No time defined for this reminder</string>
    <string name="group_error_no_reminder_time">A reminder of this group has no time defined</string>
    <string name="settings_error_no_reminder_time">A reminder has no time defined</string>
    <string name="utils_date_format_full">yyyy/MM/dd hh:mm a</string>
    <string name="about_sources">View sources on Github</string>
    <string name="about_sources_url" translatable="false">https://github.com/AdricoM/rememberall</string>
    <string name="about_browser_choice_label">Open link with</string>
    <string name="about_license">License</string>
    <string name="about_license_value">The Beer-ware license</string>
    <string name="about_license_detail">"THE BEER-WARE LICENSE" (Revision 42): <![CDATA[<myadridev@gmail.com>]]> wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return Adrien Marion</string>
</resources>
