<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_reminder_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="ifRoom"
        android:title="@string/menu_reminder_edit"/>

    <item
        android:id="@+id/menu_reminder_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom"
        android:title="@string/menu_reminder_delete"/>

    <item
        android:id="@+id/menu_reminder_save"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="ifRoom"
        android:title="@string/menu_reminder_save"/>

    <item
        android:id="@+id/menu_reminder_cancel"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:showAsAction="ifRoom"
        android:title="@string/menu_reminder_cancel"/>

</menu>

