<LinearLayout
    android:id="@+id/group_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/group_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- name -->
        <LinearLayout
            android:id="@+id/group_name_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/group_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/group_name"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/group_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:text="Toto"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/group_name_value_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:text="Toto"
                android:textSize="18sp"/>

        </LinearLayout>

        <!-- description -->
        <LinearLayout
            android:id="@+id/group_description_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/group_name_linear"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/group_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/group_description"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/group_description_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:text="Toto"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/group_description_value_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:hint="@string/global_optional"
                android:text="Toto"
                android:textSize="18sp"/>

        </LinearLayout>

        <!-- use default reminder time -->
        <LinearLayout
            android:id="@+id/group_use_default_reminder_time_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/group_description_linear"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/group_use_default_reminder_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/group_use_default_reminder_time"
                android:textSize="18sp"/>

            <CheckBox
                android:id="@+id/group_use_default_reminder_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_weight="0"/>

        </LinearLayout>

        <!-- default reminder time -->
        <LinearLayout
            android:id="@+id/group_default_reminder_time_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/group_use_default_reminder_time_linear"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/group_default_reminder_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:text="@string/group_default_reminder_time"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/group_default_reminder_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_weight="0"
                android:text="Toto"
                android:textSize="18sp"/>

        </LinearLayout>

        <TimePicker
            android:id="@+id/group_default_reminder_time_value_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/group_default_reminder_time_linear"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

    </RelativeLayout>

</LinearLayout>
